# BotW-Save-Editor

./: .gitignore  BotW-Save-Editor.cpp  BotW-Save-Editor.pro  BotW-Save-Editor.sln  BotW-Save-Editor.vcxproj  BotW-Save-Editor.vcxproj.filters  CMakeLists.txt  Makefile  README.md  json.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  savdata_list24EE.json  savdata_list471A.json  savdata_list471B.json  save-editor  useful.txt
Documentation/: sav.md
Parser/: StringTableParser.cpp  StringTableParser.h
